# pkg/docs/swagger.json
@@ -39,6 +39,39 @@
                 }
             }
         },
+        "/api/reports/": {
+            "post": {
+                "description": "Жалоба на пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reports"
+                ],
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.ReportUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/forms.SuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/change-password": {
             "post": {
                 "description": "Смена пароля",
@@ -330,6 +363,20 @@
                 },
                 "old_password": {
                     "type": "string"
+                }
+            }
+        },
+        "forms.ReportUser": {
+            "type": "object",
+            "properties": {
+                "report_text": {
+                    "type": "string"
+                },
+                "report_theme": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
